0024921: ShapeAnalysis_Curve::ValidateRange doesn't adjust the range for periodic curves

Fix the sequence of conditional checks and always try to adjust the range for periodic curves